--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -19,4 +19,4 @@ $text-color: #333;
 // Color scheme for dark modes
 $body-bg-dark: #000000;
 $projectbox-dark: lighten(#98a0ac, 2%);
-$text-color-dark: #98a0ac;
+$text-color-dark: #ffffff;
